--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,6 @@
         </div>
         <form class="form" name="form-input">
           <fieldset class="form__input-item">
-            <label for="length" class="form__label">Length</label>
-            <input type="text" class="form__input" id="length" value="4" />
-          </fieldset>
-          <fieldset class="form__input-item">
             <label for="min" class="form__label">Min</label>
             <input type="text" class="form__input" id="min" value="1" />
           </fieldset>
@@ -32,13 +28,37 @@
             <label for="max" class="form__label">Max</label>
             <input type="text" class="form__input" id="max" value="20" />
           </fieldset>
+          <fieldset class="form__input-item form__input-item_type_color">
+            <label for="length" class="form__label">Length</label>
+            <input type="text" class="form__input" id="length" value="4" />
+          </fieldset>
           <button type="submit" class="form__button" aria-label="Результат">Generate</button>
         </form>
+        <div class="previous-result" id="results">
+          <!-- Previous result -->
+        </div>
       </section>
     </main>
 
     <footer class="footer">
       <p class="footer__copyright">© 2022 Num</p>
+      <div class="footer__love">
+        <svg
+          width="20px"
+          height="20px"
+          viewBox="0 0 36 36"
+          xmlns="http://www.w3.org/2000/svg"
+          aria-hidden="true"
+          role="img"
+          class="footer__love-heart"
+        >
+          <path
+            fill="#DD2E44"
+            d="M35.885 11.833c0-5.45-4.418-9.868-9.867-9.868c-3.308 0-6.227 1.633-8.018 4.129c-1.791-2.496-4.71-4.129-8.017-4.129c-5.45 0-9.868 4.417-9.868 9.868c0 .772.098 1.52.266 2.241C1.751 22.587 11.216 31.568 18 34.034c6.783-2.466 16.249-11.447 17.617-19.959c.17-.721.268-1.469.268-2.242z"
+          ></path>
+        </svg>
+        <p class="footer__way-of-love">Anastasia</p>
+      </div>
     </footer>
   </body>
 </html>
